[project]
name = "fluxtriage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "celery>=5.4.0",
    "httpx>=0.27.2",
    "langchain-ollama>=1.0.1",
    "langchain-anthropic>=0.2.1",
    "langchain-openai>=1.1.11",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.41.0",
]
